--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* 
-Theme Name: GRPress
+Theme Name: GRPress Wordpress Theme
 Theme Theme URI:
 Author: Vitalyi Rabchevskyi
 Your Name Author URI:
@@ -7,5 +7,5 @@ Description: A custom WordPress theme created for practice.
 Version: 1.0 License: GNU General Public License v2 or later 
 License URI: http://www.gnu.org/licenses/gpl-2.0.html 
 Tags: custom, theme, development, wordpress
-Text Domain: grpress 
+Text Domain: grpress-wordpress-theme
 */
